--- a/public/index.html
+++ b/public/index.html
@@ -124,11 +124,8 @@
 
 
 <!-- חנות -->
-<div class="nav-item">
-  <a class="navlink active" href="shop.html" data-i18n="nav.shop">
-    חנות
-  </a>
-</div>
+<a class="navlink" href="#shop" data-i18n="nav.shop">חנות</a>
+
 
 
 
