--- a/public/index.html
+++ b/public/index.html
@@ -124,8 +124,11 @@
 
 
 <!-- חנות -->
-<a class="navlink" href="#shop" data-i18n="nav.shop">חנות</a>
-
+<div class="nav-item">
+  <a class="navlink" href="shop.html" data-i18n="nav.shop">
+    חנות
+  </a>
+</div>
 
 
 
