--- a/public/shop.html
+++ b/public/shop.html
@@ -237,7 +237,7 @@
       opacity:0;
       pointer-events:none;
       transform:translateY(10px);
-      transition:opacity .2s ease, transform .2s.ease;
+      transition:opacity .2s ease, transform .2s ease;
       z-index:9999;
     }
     .cart-notice.visible{
@@ -270,7 +270,8 @@
         <img id="siteLogo" src="images/logo.png" alt="bereshit logo" class="logo" />
         <nav class="shop-nav">
           <a href="index.html" data-i18n="nav.home">דף הבית</a>
-          <a href="shop.html" class="active" data-i18n="nav.shop">חנות</a>
+          <!-- הסרתי class="active" כדי שלא יהיה רקע אוטומטי -->
+          <a href="shop.html" data-i18n="nav.shop">חנות</a>
           <!-- עגלה מפנה לעגלה הקיימת בעמוד הראשי -->
           <a href="index.html#cart" data-i18n="nav.cart">עגלה</a>
 
@@ -313,7 +314,7 @@
           <!-- מוצר 1 -->
           <article class="product-card" data-sku="PROD-1" data-title="סרום חומצה היאלורונית 30ml" data-price="119">
             <img src="images/products/1.jpg" alt="סרום חומצה היאלורונית 30ml" onerror="this.src='https://picsum.photos/seed/1/600/400'"/>
-            <div class="product-title">
+            <div class="product-title" data-i18n="p1.title">
               סרום חומצה היאלורונית 30ml
               <span class="tag" data-i18n="tags.deep_moist">לחות עמוקה</span>
             </div>
@@ -323,7 +324,7 @@
               <span class="old-price">₾149</span>
             </div>
             <div class="qty-group" data-i18n-attr="aria-label:ui.qty_label">
-              כמות:
+              <span data-i18n="ui.qty_label">כמות:</span>
               <input type="number" min="1" value="1" class="qty" aria-label="כמות" />
             </div>
             <div class="btn-row">
@@ -336,7 +337,7 @@
           <!-- מוצר 2 -->
           <article class="product-card" data-sku="PROD-2" data-title="קרם לילה רטינול 50ml" data-price="169">
             <img src="images/products/2.jpg" alt="קרם לילה רטינול 50ml" onerror="this.src='https://picsum.photos/seed/2/600/400'"/>
-            <div class="product-title">
+            <div class="product-title" data-i18n="p2.title">
               קרם לילה רטינול 50ml
               <span class="tag" data-i18n="tags.antiaging">אנטי-אייג׳ינג</span>
             </div>
@@ -345,7 +346,7 @@
               <span class="price">₾169</span>
             </div>
             <div class="qty-group">
-              כמות:
+              <span data-i18n="ui.qty_label">כמות:</span>
               <input type="number" min="1" value="1" class="qty" aria-label="כמות" />
             </div>
             <div class="btn-row">
@@ -358,7 +359,7 @@
           <!-- מוצר 3 -->
           <article class="product-card" data-sku="PROD-3" data-title="שמן ורדים 15ml" data-price="89">
             <img src="images/products/3.jpg" alt="שמן ורדים 15ml" onerror="this.src='https://picsum.photos/seed/3/600/400'"/>
-            <div class="product-title">
+            <div class="product-title" data-i18n="p3.title">
               שמן ורדים 15ml
               <span class="tag" data-i18n="tags.aroma">ארומה</span>
             </div>
@@ -367,7 +368,7 @@
               <span class="price">₾89</span>
             </div>
             <div class="qty-group">
-              כמות:
+              <span data-i18n="ui.qty_label">כמות:</span>
               <input type="number" min="1" value="1" class="qty" aria-label="כמות" />
             </div>
             <div class="btn-row">
@@ -380,7 +381,7 @@
           <!-- מוצר 4 -->
           <article class="product-card" data-sku="PROD-4" data-title="מסכת חימר ירוק 75ml" data-price="99">
             <img src="images/products/4.jpg" alt="מסכת חימר ירוק 75ml" onerror="this.src='https://picsum.photos/seed/4/600/400'"/>
-            <div class="product-title">
+            <div class="product-title" data-i18n="p4.title">
               מסכת חימר ירוק 75ml
               <span class="tag" data-i18n="tags.balance">איזון</span>
             </div>
@@ -389,7 +390,7 @@
               <span class="price">₾99</span>
             </div>
             <div class="qty-group">
-              כמות:
+              <span data-i18n="ui.qty_label">כמות:</span>
               <input type="number" min="1" value="1" class="qty" aria-label="כמות" />
             </div>
             <div class="btn-row">
@@ -402,7 +403,7 @@
           <!-- מוצר 5 -->
           <article class="product-card" data-sku="PROD-5" data-title="קרם עיניים 15ml" data-price="139">
             <img src="images/products/5.jpg" alt="קרם עיניים 15ml" onerror="this.src='https://picsum.photos/seed/5/600/400'"/>
-            <div class="product-title">
+            <div class="product-title" data-i18n="p5.title">
               קרם עיניים 15ml
               <span class="tag" data-i18n="tags.eye">אזור העיניים</span>
             </div>
@@ -411,7 +412,7 @@
               <span class="price">₾139</span>
             </div>
             <div class="qty-group">
-              כמות:
+              <span data-i18n="ui.qty_label">כמות:</span>
               <input type="number" min="1" value="1" class="qty" aria-label="כמות" />
             </div>
             <div class="btn-row">
@@ -424,7 +425,7 @@
           <!-- מוצר 6 -->
           <article class="product-card" data-sku="PROD-6" data-title="סרום ויטמין C 30ml" data-price="159">
             <img src="images/products/6.jpg" alt="סרום ויטמין C 30ml" onerror="this.src='https://picsum.photos/seed/6/600/400'"/>
-            <div class="product-title">
+            <div class="product-title" data-i18n="p6.title">
               סרום ויטמין C 30ml
               <span class="tag" data-i18n="tags.glow">זוהר</span>
             </div>
@@ -433,7 +434,7 @@
               <span class="price">₾159</span>
             </div>
             <div class="qty-group">
-              כמות:
+              <span data-i18n="ui.qty_label">כמות:</span>
               <input type="number" min="1" value="1" class="qty" aria-label="כמות" />
             </div>
             <div class="btn-row">
@@ -444,23 +445,22 @@
           </article>
 
           <!-- ===== תשתית למוצרים 7–50 (שמות קבצים 7.jpg עד 50.jpg) ===== -->
-          <!-- כאן בניתי תשתית i18n מלאה למוצר 7:
-               name  -> data-i18n="p7.name"
-               tag   -> data-i18n="p7.tag"
-               desc  -> data-i18n="p7.desc"
-               כפתורים -> ui.add_to_cart / ui.view_cart / ui.buy_now (קיים כבר במילון) -->
+          <!-- אפשר לערוך שם, מחיר ותיאור לכל מוצר לפי הצורך -->
 
-          <!-- מוצר 7 – תשתית מלאה לתרגום ל-4 שפות -->
+          <!-- מוצר 7–50 – תבנית דומה; כרגע עם טקסט כללי -->
+          <!-- כדי לחסוך מקום הדוגמה הבאה חוזרת, רק עם מספר שונה -->
+          <!-- אתה יכול לשנות שם/תיאור/מחיר חופשי, וגם לשכפל עד PROD-50 ולשנות את מספר ה־data-i18n (p8.title, p8.desc וכו') -->
+
           <article class="product-card" data-sku="PROD-7" data-title="מוצר 7" data-price="99">
             <img src="images/products/7.jpg" alt="מוצר 7" onerror="this.src='https://picsum.photos/seed/7/600/400'"/>
-            <div class="product-title">
-              <span data-i18n="p7.name">מוצר 7</span>
+            <div class="product-title" data-i18n="p7.title">
+              מוצר 7
               <span class="tag" data-i18n="p7.tag">תיאור קצר</span>
             </div>
             <div class="muted" data-i18n="p7.desc">תיאור מוצר 7 – ערוך לפי הצורך.</div>
             <div><span class="price">₾99</span></div>
             <div class="qty-group">
-              כמות:
+              <span data-i18n="ui.qty_label">כמות:</span>
               <input type="number" min="1" value="1" class="qty" aria-label="כמות" />
             </div>
             <div class="btn-row">
@@ -470,19 +470,8 @@
             </div>
           </article>
 
-          <!--
-            מכאן והלאה עבור PROD-8 עד PROD-50:
-            1. העתק את הבלוק של מוצר 7.
-            2. החלף:
-               - data-sku="PROD-8"
-               - src="images/products/8.jpg"
-               - alt="מוצר 8"
-               - data-title="מוצר 8"
-               - data-i18n="p8.name" / "p8.tag" / "p8.desc"
-               - הטקסטים בתוך הספנים, למשל "מוצר 8", "תיאור קצר", "תיאור מוצר 8..."
-            3. אל תשכח להוסיף במילון ה-JS שלך (script.js / מילון i18n) את המפתחות:
-               p8.name, p8.tag, p8.desc, p9.name... עד p50.desc לכל שפה.
-          -->
+          <!-- כאן תוכל להעתיק את הבלוק של מוצר 7 ולהחליף רק את המספרים:
+               PROD-8, 8.jpg, "מוצר 8", data-i18n="p8.title" / "p8.tag" / "p8.desc" ... עד PROD-50 / 50.jpg -->
 
         </div>
       </section>
@@ -553,34 +542,45 @@
         }
       });
 
-      // ✅ סנכרון lang + dir + דגל פעיל עבור הדף הזה
-      const currentLang = (localStorage.getItem('site_lang') || (navigator.language || 'he').slice(0,2)).replace(/[^a-z]/gi,'');
-      document.documentElement.lang = currentLang;
-      document.documentElement.dir  = (currentLang === 'he' || currentLang === 'ar') ? 'rtl' : 'ltr';
-
       // מתגי שפה – שימוש באותה לוגיקה של script.js אם קיימת
       document.querySelectorAll('.lang-switch [data-lang]').forEach(function (btn) {
-        const lang = btn.getAttribute('data-lang');
-        if (lang === currentLang) {
-          btn.classList.add('active');
-        }
-
         btn.addEventListener('click', function () {
-          const chosen = btn.getAttribute('data-lang');
-          // עדכון דגל פעיל
-          document.querySelectorAll('.lang-switch [data-lang]').forEach(function (b){
-            b.classList.toggle('active', b.getAttribute('data-lang') === chosen);
-          });
-
+          const lang = btn.getAttribute('data-lang');
           if (window.setLang && typeof window.setLang === 'function') {
-            window.setLang(chosen);
+            window.setLang(lang);
           } else {
             // fallback פשוט – שמירת שפה ב-localStorage וריענון
-            localStorage.setItem('site_lang', chosen);
+            localStorage.setItem('site_lang', lang);
             location.reload();
           }
         });
       });
+
+      // ✅ סנכרון lang/dir + דגל פעיל
+      (function syncLangDirAndFlags(){
+        let lang = localStorage.getItem('site_lang') || (navigator.language || 'he').slice(0,2);
+        lang = lang.toLowerCase().replace(/[^a-z]/g,'');
+
+        document.documentElement.lang = lang;
+        document.documentElement.dir  = (lang === 'he' || lang === 'ar') ? 'rtl' : 'ltr';
+
+        document.querySelectorAll('.lang-btn').forEach(btn=>{
+          const btnLang = btn.getAttribute('data-lang');
+          btn.classList.toggle('active', btnLang === lang);
+        });
+      })();
+
+      // ✅ nav ACTIVE – רק אחרי לחיצה, לא אוטומטי בכניסה
+      (function setupShopNavActive(){
+        const links = document.querySelectorAll('.shop-nav a');
+        links.forEach(link=>{
+          link.addEventListener('click', function(){
+            links.forEach(l=>l.classList.remove('active'));
+            this.classList.add('active');
+          });
+        });
+      })();
+
     })();
   </script>
 </body>
