--- a/public/cancel.html
+++ b/public/cancel.html
@@ -4,6 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title data-i18n="cancel.title">התשלום בוטל</title>
+
+  <!-- ✅ שימוש ב-CSS הראשי (body.cancel-page + .status-card) -->
+  <link rel="stylesheet" href="styles.css">
+
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
     body{font-family:Heebo,system-ui;max-width:780px;margin:40px auto;padding:0 16px}
@@ -12,23 +16,28 @@
     .visually-hidden{position:absolute!important;width:1px;height:1px;margin:-1px;border:0;padding:0;clip:rect(0 0 0 0);overflow:hidden}
   </style>
 </head>
-<body>
+<body class="cancel-page">
 
-  <!-- מתג שפה -->
-  <div class="lang-switch" aria-label="Language">
-    <label for="langSel" class="visually-hidden">Language</label>
-    <select id="langSel">
-      <option value="he">HE</option>
-      <option value="en">EN</option>
-      <option value="ru">RU</option>
-      <option value="ka">KA</option>
-    </select>
-  </div>
+  <!-- כרטיס סטטוס יוקרתי -->
+  <main class="status-card">
 
-  <!-- התוכן המקורי שלך עם data-i18n -->
-  <h1 data-i18n="cancel.heading">❌ התשלום בוטל</h1>
-  <p data-i18n="cancel.desc">אפשר לחזור ולנסות שוב בכל עת.</p>
-  <p><a href="/" data-i18n="cancel.back_home">חזרה לעמוד הראשי</a></p>
+    <!-- מתג שפה -->
+    <div class="lang-switch" aria-label="Language">
+      <label for="langSel" class="visually-hidden">Language</label>
+      <select id="langSel">
+        <option value="he">HE</option>
+        <option value="en">EN</option>
+        <option value="ru">RU</option>
+        <option value="ka">KA</option>
+      </select>
+    </div>
+
+    <!-- התוכן המקורי שלך עם data-i18n -->
+    <h1 data-i18n="cancel.heading">❌ התשלום בוטל</h1>
+    <p data-i18n="cancel.desc">אפשר לחזור ולנסות שוב בכל עת.</p>
+    <p><a href="/" data-i18n="cancel.back_home">חזרה לעמוד הראשי</a></p>
+
+  </main>
 
   <!-- סנכרון שפה ותרגום -->
   <script>
