--- a/public/landing-treatments.html
+++ b/public/landing-treatments.html
@@ -19,7 +19,7 @@
   <!-- Hero -->
   <main class="container" style="max-width:960px;margin:24px auto 40px;padding:0 12px;">
     <section class="hero" id="top" style="margin-bottom:32px;">
-      <img src="images/logo.png" alt="BERESHIT SPA" style="max-width:260px;width:100%;margin:0 auto 16px;display:block;" />
+      <img src="images/logo.png" class="landing-logo" alt="BERESHIT SPA" />
 
       <p class="promo-eyebrow" data-i18n="landing.hero.eyebrow">
         Japanese Head Spa &amp; Thai Massage – Batumi
