--- a/public/landing-treatments.html
+++ b/public/landing-treatments.html
@@ -63,23 +63,23 @@
       <div class="home-grid">
         <!-- 👑 ספא ראש יפני -->
         <article class="product-card">
-          <div class="tag" data-i18n="landing.treat.head.tag">👑 Japanese Head Spa</div>
-          <h3 class="product-title" data-i18n="landing.treat.head.title">טיפול הדגל – ספא ראש יפני</h3>
-          <p data-i18n="landing.treat.head.desc">
+          <div class="tag">👑 Japanese Head Spa</div>
+          <h3 class="product-title">טיפול הדגל – ספא ראש יפני</h3>
+          <p>
             טיפול יפני מסורתי המשלב ניקוי, עיסוי קרקפת, מסכות ופינוקי מים חמימים.
             כולל שטיפה, מגבת חמה, סרום לקרקפת וייבוש שיער מלא.
           </p>
-          <p class="price" data-i18n="landing.treat.head.price">
+          <p class="price">
             60 דק' – 200₾ · 90 דק' – 250₾
           </p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-head" value="60" checked />
-              <span data-i18n="landing.duration.60">60 דק'</span>
+              <span>60 דק'</span>
             </label>
             <label>
               <input type="radio" name="dur-head" value="90" />
-              <span data-i18n="landing.duration.90">90 דק'</span>
+              <span>90 דק'</span>
             </label>
           </div>
           <button class="button"
@@ -93,13 +93,13 @@
 
         <!-- 🌼 עיסוי פנים בקומפרסים תאילנדים -->
         <article class="product-card">
-          <div class="tag" data-i18n="landing.treat.facialThaiCompress.tag">🌼 Thai Herbal Compress Facial</div>
-          <h3 class="product-title" data-i18n="landing.treat.facialThaiCompress.title">עיסוי פנים בקומפרסים תאילנדים</h3>
-          <p data-i18n="landing.treat.facialThaiCompress.desc">
+          <div class="tag">🌼 Thai Herbal Compress Facial</div>
+          <h3 class="product-title">עיסוי פנים בקומפרסים תאילנדים</h3>
+          <p>
             קומפרסים תאילנדים חמים מרפים את שרירי הפנים ומשפרים את זרימת הדם.
             כולל עיסוי פנים מעמיק, קרקפת ופלג גוף עליון.
           </p>
-          <p class="price" data-i18n="landing.treat.facialThaiCompress.price">60 דק' – 150₾</p>
+          <p class="price">60 דק' – 150₾</p>
           <button class="button"
                   data-book-btn
                   data-treatment-key="facial-thai-compress"
@@ -110,13 +110,13 @@
 
         <!-- 🔥 עיסוי פנים באבנים חמות -->
         <article class="product-card">
-          <div class="tag" data-i18n="landing.treat.facialHotStone.tag">🔥 Hot Stone Facial</div>
-          <h3 class="product-title" data-i18n="landing.treat.facialHotStone.title">עיסוי פנים באבנים חמות</h3>
-          <p data-i18n="landing.treat.facialHotStone.desc">
+          <div class="tag">🔥 Hot Stone Facial</div>
+          <h3 class="product-title">עיסוי פנים באבנים חמות</h3>
+          <p>
             אבני בזלת חמות נעות בעדינות על הפנים והצוואר ומשחררות מתחים.
             כולל עיסוי פנים, קרקפת וצוואר.
           </p>
-          <p class="price" data-i18n="landing.treat.facialHotStone.price">60 דק' – 160₾</p>
+          <p class="price">60 דק' – 160₾</p>
           <button class="button"
                   data-book-btn
                   data-treatment-key="facial-hot-stone"
@@ -127,20 +127,20 @@
 
         <!-- 🌺 עיסוי פנים תאילנדי מסורתי -->
         <article class="product-card">
-          <div class="tag" data-i18n="landing.treat.facialThai.tag">🌺 Traditional Thai Face Massage</div>
-          <h3 class="product-title" data-i18n="landing.treat.facialThai.title">עיסוי פנים תאילנדי מסורתי</h3>
-          <p data-i18n="landing.treat.facialThai.desc">
+          <div class="tag">🌺 Traditional Thai Face Massage</div>
+          <h3 class="product-title">עיסוי פנים תאילנדי מסורתי</h3>
+          <p>
             עיסוי עדין עם לחיצות אנרגטיות, משחרר מתח מהפנים, הלסת והצוואר.
           </p>
-          <p class="price" data-i18n="landing.treat.facialThai.price">30 דק' – 90₾ · 60 דק' – 150₾</p>
+          <p class="price">30 דק' – 90₾ · 60 דק' – 150₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-face-thai" value="30" checked />
-              <span data-i18n="landing.duration.30">30 דק'</span>
+              <span>30 דק'</span>
             </label>
             <label>
               <input type="radio" name="dur-face-thai" value="60" />
-              <span data-i18n="landing.duration.60">60 דק'</span>
+              <span>60 דק'</span>
             </label>
           </div>
           <button class="button"
@@ -154,20 +154,20 @@
 
         <!-- 🌿 עיסוי פנים ארומתרפי -->
         <article class="product-card">
-          <div class="tag" data-i18n="landing.treat.facialAroma.tag">🌿 Aromatherapy Facial</div>
-          <h3 class="product-title" data-i18n="landing.treat.facialAroma.title">עיסוי פנים ארומתרפי</h3>
-          <p data-i18n="landing.treat.facialAroma.desc">
+          <div class="tag">🌿 Aromatherapy Facial</div>
+          <h3 class="product-title">עיסוי פנים ארומתרפי</h3>
+          <p>
             טיפול עדין עם שמנים אתריים טהורים, מרגיע את מערכת העצבים ומעניק זוהר לעור.
           </p>
-          <p class="price" data-i18n="landing.treat.facialAroma.price">30 דק' – 80₾ · 60 דק' – 140₾</p>
+          <p class="price">30 דק' – 80₾ · 60 דק' – 140₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-face-aroma" value="30" checked />
-              <span data-i18n="landing.duration.30">30 דק'</span>
+              <span>30 דק'</span>
             </label>
             <label>
               <input type="radio" name="dur-face-aroma" value="60" />
-              <span data-i18n="landing.duration.60">60 דק'</span>
+              <span>60 דק'</span>
             </label>
           </div>
           <button class="button"
@@ -181,12 +181,12 @@
 
         <!-- 💆‍♂️ גב–כתפיים–צוואר -->
         <article class="product-card">
-          <div class="tag" data-i18n="landing.treat.backBasic.tag">💆‍♂️ Back–Neck–Shoulders</div>
-          <h3 class="product-title" data-i18n="landing.treat.backBasic.title">עיסוי גב–כתפיים–צוואר</h3>
-          <p data-i18n="landing.treat.backBasic.desc">
+          <div class="tag">💆‍♂️ Back–Neck–Shoulders</div>
+          <h3 class="product-title">עיסוי גב–כתפיים–צוואר</h3>
+          <p>
             עיסוי ממוקד לשחרור מתחים באזורי העומס המרכזיים – מתאים לישיבה ממושכת.
           </p>
-          <p class="price" data-i18n="landing.treat.backBasic.price">60 דק' – 150₾</p>
+          <p class="price">60 דק' – 150₾</p>
           <button class="button"
                   data-book-btn
                   data-treatment-key="back-basic"
@@ -197,12 +197,12 @@
 
         <!-- 🔥 גב–כתפיים–צוואר עם אבנים חמות -->
         <article class="product-card">
-          <div class="tag" data-i18n="landing.treat.backHotStone.tag">🔥 Hot Stone Back Massage</div>
-          <h3 class="product-title" data-i18n="landing.treat.backHotStone.title">עיסוי גב–כתפיים–צוואר עם אבנים חמות</h3>
-          <p data-i18n="landing.treat.backHotStone.desc">
+          <div class="tag">🔥 Hot Stone Back Massage</div>
+          <h3 class="product-title">עיסוי גב–כתפיים–צוואר עם אבנים חמות</h3>
+          <p>
             אבני בזלת חמות חודרות לשרירים וממיסות מתחים עמוקים, בשילוב עיסוי ידני עמוק.
           </p>
-          <p class="price" data-i18n="landing.treat.backHotStone.price">60 דק' – 180₾</p>
+          <p class="price">60 דק' – 180₾</p>
           <button class="button"
                   data-book-btn
                   data-treatment-key="back-hot-stone"
@@ -213,20 +213,20 @@
 
         <!-- 🇹🇭 עיסוי תאילנדי מסורתי -->
         <article class="product-card">
-          <div class="tag" data-i18n="landing.treat.bodyThai.tag">🇹🇭 Traditional Thai Massage</div>
-          <h3 class="product-title" data-i18n="landing.treat.bodyThai.title">עיסוי תאילנדי מסורתי</h3>
-          <p data-i18n="landing.treat.bodyThai.desc">
+          <div class="tag">🇹🇭 Traditional Thai Massage</div>
+          <h3 class="product-title">עיסוי תאילנדי מסורתי</h3>
+          <p>
             טיפול עתיק ללא שמן המשלב לחיצות, מתיחות ועבודה על קווי האנרגיה.
           </p>
-          <p class="price" data-i18n="landing.treat.bodyThai.price">60 דק' – 170₾ · 90 דק' – 220₾</p>
+          <p class="price">60 דק' – 170₾ · 90 דק' – 220₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-thai" value="60" checked />
-              <span data-i18n="landing.duration.60">60 דק'</span>
+              <span>60 דק'</span>
             </label>
             <label>
               <input type="radio" name="dur-thai" value="90" />
-              <span data-i18n="landing.duration.90">90 דק'</span>
+              <span>90 דק'</span>
             </label>
           </div>
           <button class="button"
@@ -240,20 +240,20 @@
 
         <!-- 🇹🇭 Thai Oil Massage -->
         <article class="product-card">
-          <div class="tag" data-i18n="landing.treat.bodyThaiOil.tag">🇹🇭 Thai Oil Massage</div>
-          <h3 class="product-title" data-i18n="landing.treat.bodyThaiOil.title">עיסוי שמן תאילנדי</h3>
-          <p data-i18n="landing.treat.bodyThaiOil.desc">
+          <div class="tag">🇹🇭 Thai Oil Massage</div>
+          <h3 class="product-title">עיסוי שמן תאילנדי</h3>
+          <p>
             עיסוי גוף מלא בשמן חם בתנועות זורמות ועמוקות, לשחרור עומס שרירי.
           </p>
-          <p class="price" data-i18n="landing.treat.bodyThaiOil.price">60 דק' – 180₾ · 90 דק' – 230₾</p>
+          <p class="price">60 דק' – 180₾ · 90 דק' – 230₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-thai-oil" value="60" checked />
-              <span data-i18n="landing.duration.60">60 דק'</span>
+              <span>60 דק'</span>
             </label>
             <label>
               <input type="radio" name="dur-thai-oil" value="90" />
-              <span data-i18n="landing.duration.90">90 דק'</span>
+              <span>90 דק'</span>
             </label>
           </div>
           <button class="button"
@@ -267,12 +267,12 @@
 
         <!-- 🌿 Aromatherapy Oil Massage -->
         <article class="product-card">
-          <div class="tag" data-i18n="landing.treat.bodyAroma.tag">🌿 Aromatherapy Oil Massage</div>
-          <h3 class="product-title" data-i18n="landing.treat.bodyAroma.title">עיסוי ארומתרפי בשמן</h3>
-          <p data-i18n="landing.treat.bodyAroma.desc">
+          <div class="tag">🌿 Aromatherapy Oil Massage</div>
+          <h3 class="product-title">עיסוי ארומתרפי בשמן</h3>
+          <p>
             שמנים אתריים טהורים בשילוב עיסוי גוף מרגיע ומלטף.
           </p>
-          <p class="price" data-i18n="landing.treat.bodyAroma.price">60 דק' – 190₾</p>
+          <p class="price">60 דק' – 190₾</p>
           <button class="button"
                   data-book-btn
                   data-treatment-key="body-aroma"
@@ -283,20 +283,20 @@
 
         <!-- 🇹🇭 Thai Therapeutic Massage -->
         <article class="product-card">
-          <div class="tag" data-i18n="landing.treat.bodyThaiTher.tag">🇹🇭 Thai Therapeutic Massage</div>
-          <h3 class="product-title" data-i18n="landing.treat.bodyThaiTher.title">עיסוי תאילנדי רפואי</h3>
-          <p data-i18n="landing.treat.bodyThaiTher.desc">
+          <div class="tag">🇹🇭 Thai Therapeutic Massage</div>
+          <h3 class="product-title">עיסוי תאילנדי רפואי</h3>
+          <p>
             עיסוי טיפולי עמוק עם לחיצות ממוקדות ומתיחות מדויקות – מתאים לכאבי גב וצוואר.
           </p>
-          <p class="price" data-i18n="landing.treat.bodyThaiTher.price">60 דק' – 230₾ · 90 דק' – 280₾</p>
+          <p class="price">60 דק' – 230₾ · 90 דק' – 280₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-thai-ther" value="60" checked />
-              <span data-i18n="landing.duration.60">60 דק'</span>
+              <span>60 דק'</span>
             </label>
             <label>
               <input type="radio" name="dur-thai-ther" value="90" />
-              <span data-i18n="landing.duration.90">90 דק'</span>
+              <span>90 דק'</span>
             </label>
           </div>
           <button class="button"
@@ -310,12 +310,12 @@
 
         <!-- 🔥 Hot Stone Massage -->
         <article class="product-card">
-          <div class="tag" data-i18n="landing.treat.bodyHotStone.tag">🔥 Hot Stone Massage</div>
-          <h3 class="product-title" data-i18n="landing.treat.bodyHotStone.title">עיסוי באבנים חמות – גוף מלא</h3>
-          <p data-i18n="landing.treat.bodyHotStone.desc">
+          <div class="tag">🔥 Hot Stone Massage</div>
+          <h3 class="product-title">עיסוי באבנים חמות – גוף מלא</h3>
+          <p>
             אבני בזלת חמות מחליקות על הגוף וממיסות מתחים עמוקים – רוגע עמוק וזרימת דם טובה.
           </p>
-          <p class="price" data-i18n="landing.treat.bodyHotStone.price">60 דק' – 210₾</p>
+          <p class="price">60 דק' – 210₾</p>
           <button class="button"
                   data-book-btn
                   data-treatment-key="body-hot-stone"
@@ -326,20 +326,20 @@
 
         <!-- 🌼 Thai Herbal Compress Massage – גוף -->
         <article class="product-card">
-          <div class="tag" data-i18n="landing.treat.bodyThaiComp.tag">🌼 Thai Herbal Compress Massage</div>
-          <h3 class="product-title" data-i18n="landing.treat.bodyThaiComp.title">עיסוי גוף בקומפרסים תאילנדים</h3>
-          <p data-i18n="landing.treat.bodyThaiComp.desc">
+          <div class="tag">🌼 Thai Herbal Compress Massage</div>
+          <h3 class="product-title">עיסוי גוף בקומפרסים תאילנדים</h3>
+          <p>
             שקיות צמחים תאילנדים חמות מעניקות ריפוי טבעי, ניקוז עומק והקלה על כאבים.
           </p>
-          <p class="price" data-i18n="landing.treat.bodyThaiComp.price">60 דק' – 220₾ · 90 דק' – 260₾</p>
+          <p class="price">60 דק' – 220₾ · 90 דק' – 260₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-thai-comp-body" value="60" checked />
-              <span data-i18n="landing.duration.60">60 דק'</span>
+              <span>60 דק'</span>
             </label>
             <label>
               <input type="radio" name="dur-thai-comp-body" value="90" />
-              <span data-i18n="landing.duration.90">90 דק'</span>
+              <span>90 דק'</span>
             </label>
           </div>
           <button class="button"
@@ -353,20 +353,20 @@
 
         <!-- 🇯🇵 Shiatsu -->
         <article class="product-card">
-          <div class="tag" data-i18n="landing.treat.bodyShiatsu.tag">🇯🇵 Shiatsu Massage</div>
-          <h3 class="product-title" data-i18n="landing.treat.bodyShiatsu.title">עיסוי שיאצו יפני</h3>
-          <p data-i18n="landing.treat.bodyShiatsu.desc">
+          <div class="tag">🇯🇵 Shiatsu Massage</div>
+          <h3 class="product-title">עיסוי שיאצו יפני</h3>
+          <p>
             עיסוי ללא שמן בלחיצות לאורך מרידיאנים – מאזן אנרגיה פנימית ומרגיע עומס נפשי.
           </p>
-          <p class="price" data-i18n="landing.treat.bodyShiatsu.price">60 דק' – 180₾ · 90 דק' – 230₾</p>
+          <p class="price">60 דק' – 180₾ · 90 דק' – 230₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-shiatsu" value="60" checked />
-              <span data-i18n="landing.duration.60">60 דק'</span>
+              <span>60 דק'</span>
             </label>
             <label>
               <input type="radio" name="dur-shiatsu" value="90" />
-              <span data-i18n="landing.duration.90">90 דק'</span>
+              <span>90 דק'</span>
             </label>
           </div>
           <button class="button"
@@ -380,20 +380,20 @@
 
         <!-- 🦶 פוט מסאז' -->
         <article class="product-card">
-          <div class="tag" data-i18n="landing.treat.foot.tag">🦶 Thai Foot Massage</div>
-          <h3 class="product-title" data-i18n="landing.treat.foot.title">פוט מסאז' – עיסוי כפות רגליים תאילנדי רפלקסולוגי</h3>
-          <p data-i18n="landing.treat.foot.desc">
+          <div class="tag">🦶 Thai Foot Massage</div>
+          <h3 class="product-title">פוט מסאז' – עיסוי כפות רגליים תאילנדי רפלקסולוגי</h3>
+          <p>
             עיסוי עמוק ועדין לכפות הרגליים עם לחיצות רפלקסולוגיות, מאזן מערכות גוף שונות.
           </p>
-          <p class="price" data-i18n="landing.treat.foot.price">30 דק' – 80₾ · 60 דק' – 120₾</p>
+          <p class="price">30 דק' – 80₾ · 60 דק' – 120₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-foot" value="30" checked />
-              <span data-i18n="landing.duration.30">30 דק'</span>
+              <span>30 דק'</span>
             </label>
             <label>
               <input type="radio" name="dur-foot" value="60" />
-              <span data-i18n="landing.duration.60">60 דק'</span>
+              <span>60 דק'</span>
             </label>
           </div>
           <button class="button"
