--- a/public/landing-treatments.html
+++ b/public/landing-treatments.html
@@ -217,6 +217,7 @@
           <h3 class="product-title">עיסוי תאילנדי מסורתי</h3>
           <p>
             טיפול עתיק ללא שמן המשלב לחיצות, מתיחות ועבודה על קווי האנרגיה.
+            עיסוי גוף מלא מכף רגל ועד ראש כולל עיסוי פנים.
           </p>
           <p class="price">60 דק' – 170₾ · 90 דק' – 220₾</p>
           <div class="duration-options">
@@ -244,6 +245,7 @@
           <h3 class="product-title">עיסוי שמן תאילנדי</h3>
           <p>
             עיסוי גוף מלא בשמן חם בתנועות זורמות ועמוקות, לשחרור עומס שרירי.
+            עיסוי גוף מלא מכף רגל ועד ראש כולל עיסוי פנים.
           </p>
           <p class="price">60 דק' – 180₾ · 90 דק' – 230₾</p>
           <div class="duration-options">
@@ -271,6 +273,7 @@
           <h3 class="product-title">עיסוי ארומתרפי בשמן</h3>
           <p>
             שמנים אתריים טהורים בשילוב עיסוי גוף מרגיע ומלטף.
+            עיסוי גוף מלא מכף רגל ועד ראש כולל עיסוי פנים.
           </p>
           <p class="price">60 דק' – 190₾</p>
           <button class="button"
@@ -287,6 +290,7 @@
           <h3 class="product-title">עיסוי תאילנדי רפואי</h3>
           <p>
             עיסוי טיפולי עמוק עם לחיצות ממוקדות ומתיחות מדויקות – מתאים לכאבי גב וצוואר.
+            עיסוי גוף מלא מכף רגל ועד ראש כולל עיסוי פנים.
           </p>
           <p class="price">60 דק' – 230₾ · 90 דק' – 280₾</p>
           <div class="duration-options">
@@ -314,6 +318,7 @@
           <h3 class="product-title">עיסוי באבנים חמות – גוף מלא</h3>
           <p>
             אבני בזלת חמות מחליקות על הגוף וממיסות מתחים עמוקים – רוגע עמוק וזרימת דם טובה.
+            עיסוי גוף מלא מכף רגל ועד ראש כולל עיסוי פנים.
           </p>
           <p class="price">60 דק' – 210₾</p>
           <button class="button"
@@ -330,6 +335,7 @@
           <h3 class="product-title">עיסוי גוף בקומפרסים תאילנדים</h3>
           <p>
             שקיות צמחים תאילנדים חמות מעניקות ריפוי טבעי, ניקוז עומק והקלה על כאבים.
+            עיסוי גוף מלא מכף רגל ועד ראש כולל עיסוי פנים.
           </p>
           <p class="price">60 דק' – 220₾ · 90 דק' – 260₾</p>
           <div class="duration-options">
@@ -357,6 +363,7 @@
           <h3 class="product-title">עיסוי שיאצו יפני</h3>
           <p>
             עיסוי ללא שמן בלחיצות לאורך מרידיאנים – מאזן אנרגיה פנימית ומרגיע עומס נפשי.
+            עיסוי גוף מלא מכף רגל ועד ראש כולל עיסוי פנים.
           </p>
           <p class="price">60 דק' – 180₾ · 90 דק' – 230₾</p>
           <div class="duration-options">
