--- a/public/landing-treatments.html
+++ b/public/landing-treatments.html
@@ -28,7 +28,7 @@
         ספא ראש יפני ועיסויי גוף תאילנדיים ברמת בוטיק
       </h1>
       <p class="promo-text lg" data-i18n="landing.hero.subtitle">
-        בחר/י טיפול, קבע/י שעה נוחה ושלים/י תשלום מאובטח בכרטיס אשראי – הכול בדף אחד.
+        בחר/י טיפול, קבע/י שעה נוחה ותאם/י את ההזמנה בקלות בווטסאפ או בטלפון – הכול בדף אחד.
       </p>
 
       <!-- כפתור גלילה לטיפולים -->
@@ -63,11 +63,10 @@
       <div class="home-grid">
         <!-- 👑 ספא ראש יפני -->
         <article class="product-card">
-          <div class="tag">👑 Japanese Head Spa</div>
+          <div class="tag">👑 ספא ראש יפני</div>
           <h3 class="product-title">טיפול הדגל – ספא ראש יפני</h3>
           <p>
-            טיפול יפני מסורתי המשלב ניקוי, עיסוי קרקפת, מסכות ופינוקי מים חמימים.
-            כולל שטיפה, מגבת חמה, סרום לקרקפת וייבוש שיער מלא.
+            עיסוי יפני מסורתי המשלב ניקוי, עיסוי קרקפת, מסכות ופינוקי מים חמימים. הטכניקה ממריצה את זרימת הדם, מחזקת את שורשי השיער ומרגיעה עומקים. כולל שטיפה, מגבת חמה, סרום לקרקפת וייבוש שיער מלא. מסיים במנוחה קצרה עם תה וניחוח ארומטי עדין. (90 דק' כולל עיסוי ידיים ורגליים)
           </p>
           <p class="price">
             60 דק' – 200₾ · 90 דק' – 250₾
@@ -93,11 +92,10 @@
 
         <!-- 🌼 עיסוי פנים בקומפרסים תאילנדים -->
         <article class="product-card">
-          <div class="tag">🌼 Thai Herbal Compress Facial</div>
+          <div class="tag">🌼 קומפרסים תאילנדיים לפנים</div>
           <h3 class="product-title">עיסוי פנים בקומפרסים תאילנדים</h3>
           <p>
-            קומפרסים תאילנדים חמים מרפים את שרירי הפנים ומשפרים את זרימת הדם.
-            כולל עיסוי פנים מעמיק, קרקפת ופלג גוף עליון.
+            קומפרסים תאילנדיים חמים מרפים את שרירי הפנים ומשפרים את זרימת הדם. החום מעודד ספיגת לחות ומעניק לעור תחושת רכות והתחדשות טבעית. כולל עיסוי פנים מעמיק, עיסוי קרקפת מרגיע ועבודה על פלג גוף עליון. טיפול חמים, מפנק ועוטף שמעניק רוגע עמוק.
           </p>
           <p class="price">60 דק' – 150₾</p>
           <button class="button"
@@ -110,11 +108,10 @@
 
         <!-- 🔥 עיסוי פנים באבנים חמות -->
         <article class="product-card">
-          <div class="tag">🔥 Hot Stone Facial</div>
+          <div class="tag">🔥 אבנים חמות לפנים</div>
           <h3 class="product-title">עיסוי פנים באבנים חמות</h3>
           <p>
-            אבני בזלת חמות נעות בעדינות על הפנים והצוואר ומשחררות מתחים.
-            כולל עיסוי פנים, קרקפת וצוואר.
+            אבני בזלת חמות נעות בעדינות על הפנים והצוואר ומשחררות מתחים. כולל עיסוי פנים, קרקפת, צוואר ופלג גוף עליון. החום משפר זרימת דם, מרכך שרירים ומעניק שחרור עמוק. מתאים במיוחד לעומס נפשי ועייפות באזור הראש.
           </p>
           <p class="price">60 דק' – 160₾</p>
           <button class="button"
@@ -127,10 +124,10 @@
 
         <!-- 🌺 עיסוי פנים תאילנדי מסורתי -->
         <article class="product-card">
-          <div class="tag">🌺 Traditional Thai Face Massage</div>
+          <div class="tag">🌺 עיסוי פנים תאילנדי</div>
           <h3 class="product-title">עיסוי פנים תאילנדי מסורתי</h3>
           <p>
-            עיסוי עדין עם לחיצות אנרגטיות, משחרר מתח מהפנים, הלסת והצוואר.
+            עיסוי עדין המבוסס על טכניקות תאילנדיות עתיקות ולחיצות אנרגטיות. משחרר מתח מהפנים, הלסת והצוואר. בגרסת 60 דקות כולל גם עיסוי כתפיים ופלג גוף עליון. מעודד רגיעה, זרימה ואיזון עצבי עמוק.
           </p>
           <p class="price">30 דק' – 90₾ · 60 דק' – 150₾</p>
           <div class="duration-options">
@@ -154,10 +151,10 @@
 
         <!-- 🌿 עיסוי פנים ארומתרפי -->
         <article class="product-card">
-          <div class="tag">🌿 Aromatherapy Facial</div>
+          <div class="tag">🌿 ארומתרפיה לפנים</div>
           <h3 class="product-title">עיסוי פנים ארומתרפי</h3>
           <p>
-            טיפול עדין עם שמנים אתריים טהורים, מרגיע את מערכת העצבים ומעניק זוהר לעור.
+            טיפול עדין עם שמנים אתריים טהורים המותאמים לנשימה ולעור הפנים. מרגיע את מערכת העצבים ומשפר את זרימת הדם בעור. בגרסת 60 דקות כולל עיסוי כתפיים עמוק וקרקפת מורחבת. מעניק תחושת רכות, זוהר ואיזון רגשי עמוק.
           </p>
           <p class="price">30 דק' – 80₾ · 60 דק' – 140₾</p>
           <div class="duration-options">
@@ -181,10 +178,10 @@
 
         <!-- 💆‍♂️ גב–כתפיים–צוואר -->
         <article class="product-card">
-          <div class="tag">💆‍♂️ Back–Neck–Shoulders</div>
+          <div class="tag">💆‍♂️ גב–כתפיים–צוואר</div>
           <h3 class="product-title">עיסוי גב–כתפיים–צוואר</h3>
           <p>
-            עיסוי ממוקד לשחרור מתחים באזורי העומס המרכזיים – מתאים לישיבה ממושכת.
+            עיסוי ממוקד לשחרור מתחים וחסימות באזורי העומס המרכזיים. משחרר שרירים תפוסים ומחזיר גמישות ותנועתיות טבעית. כולל לחיצות עמוקות ותנועות ארוכות לשחרור מדויק ומיידי. מומלץ לכאבי צוואר, ישיבה ממושכת ועומס יומיומי.
           </p>
           <p class="price">60 דק' – 150₾</p>
           <button class="button"
@@ -197,10 +194,10 @@
 
         <!-- 🔥 גב–כתפיים–צוואר עם אבנים חמות -->
         <article class="product-card">
-          <div class="tag">🔥 Hot Stone Back Massage</div>
+          <div class="tag">🔥 אבנים חמות לגב</div>
           <h3 class="product-title">עיסוי גב–כתפיים–צוואר עם אבנים חמות</h3>
           <p>
-            אבני בזלת חמות חודרות לשרירים וממיסות מתחים עמוקים, בשילוב עיסוי ידני עמוק.
+            אבני בזלת חמות חודרות לשרירים וממיסות מתחים עמוקים. החום מאפשר עבודה יעילה ובטוחה על אזורי עומס וכאב כרוני. משלב עיסוי ידני מעמיק ליצירת הרפיה מלאה של פלג הגוף העליון. מומלץ לעומס חוזר, כאבים כרוניים ומתח נפשי.
           </p>
           <p class="price">60 דק' – 180₾</p>
           <button class="button"
@@ -213,11 +210,10 @@
 
         <!-- 🇹🇭 עיסוי תאילנדי מסורתי -->
         <article class="product-card">
-          <div class="tag">🇹🇭 Traditional Thai Massage</div>
+          <div class="tag">🇹🇭 עיסוי תאילנדי מסורתי</div>
           <h3 class="product-title">עיסוי תאילנדי מסורתי</h3>
           <p>
-            טיפול עתיק ללא שמן המשלב לחיצות, מתיחות ועבודה על קווי האנרגיה.
-            עיסוי גוף מלא מכף רגל ועד ראש כולל עיסוי פנים.
+            עיסוי גוף מלא מכף רגל ועד ראש כולל עיסוי פנים. טיפול עתיק ללא שמן המשלב לחיצות, מתיחות ועבודה על קווי האנרגיה (Sen). משפר גמישות, מפיג עומס ומחזיר תנועה חופשית לגוף. הטכניקה מעוררת זרימה אנרגטית ומעניקה חיוניות עמוקה.
           </p>
           <p class="price">60 דק' – 170₾ · 90 דק' – 220₾</p>
           <div class="duration-options">
@@ -241,11 +237,10 @@
 
         <!-- 🇹🇭 Thai Oil Massage -->
         <article class="product-card">
-          <div class="tag">🇹🇭 Thai Oil Massage</div>
+          <div class="tag">🇹🇭 עיסוי שמן תאילנדי</div>
           <h3 class="product-title">עיסוי שמן תאילנדי</h3>
           <p>
-            עיסוי גוף מלא בשמן חם בתנועות זורמות ועמוקות, לשחרור עומס שרירי.
-            עיסוי גוף מלא מכף רגל ועד ראש כולל עיסוי פנים.
+            עיסוי גוף מלא מכף רגל ועד ראש כולל עיסוי פנים. עיסוי גוף מלא בשמן חם בתנועות זורמות ועמוקות. משלב לחיצות תאילנדיות להמסה של מתח ועומס שרירי. מאזן את מערכת העצבים ומשרה רוגע מפנק בכל הגוף.
           </p>
           <p class="price">60 דק' – 180₾ · 90 דק' – 230₾</p>
           <div class="duration-options">
@@ -269,11 +264,10 @@
 
         <!-- 🌿 Aromatherapy Oil Massage -->
         <article class="product-card">
-          <div class="tag">🌿 Aromatherapy Oil Massage</div>
+          <div class="tag">🌿 עיסוי ארומתרפי בשמן</div>
           <h3 class="product-title">עיסוי ארומתרפי בשמן</h3>
           <p>
-            שמנים אתריים טהורים בשילוב עיסוי גוף מרגיע ומלטף.
-            עיסוי גוף מלא מכף רגל ועד ראש כולל עיסוי פנים.
+            עיסוי גוף מלא מכף רגל ועד ראש כולל עיסוי פנים. שמנים אתריים טהורים בשילוב עיסוי גוף מרגיע ומלטף. הריחות הטבעיים מאזנים את מערכת העצבים ומפחיתים מתחים. התנועות האיטיות מרפות עומס שרירי ויוצרות תחושת שלווה עמוקה.
           </p>
           <p class="price">60 דק' – 190₾</p>
           <button class="button"
@@ -286,11 +280,10 @@
 
         <!-- 🇹🇭 Thai Therapeutic Massage -->
         <article class="product-card">
-          <div class="tag">🇹🇭 Thai Therapeutic Massage</div>
+          <div class="tag">🇹🇭 עיסוי תאילנדי רפואי</div>
           <h3 class="product-title">עיסוי תאילנדי רפואי</h3>
           <p>
-            עיסוי טיפולי עמוק עם לחיצות ממוקדות ומתיחות מדויקות – מתאים לכאבי גב וצוואר.
-            עיסוי גוף מלא מכף רגל ועד ראש כולל עיסוי פנים.
+            עיסוי גוף מלא מכף רגל ועד ראש כולל עיסוי פנים. עיסוי טיפולי עמוק המשלב לחיצות ממוקדות ומתיחות מדויקות. מטפל בכאבי גב, צוואר וכתפיים ובשרירים תפוסים כרונית. מעודד שיקום תנועתי והקלה אמיתית ומתמשכת.
           </p>
           <p class="price">60 דק' – 230₾ · 90 דק' – 280₾</p>
           <div class="duration-options">
@@ -314,11 +307,10 @@
 
         <!-- 🔥 Hot Stone Massage -->
         <article class="product-card">
-          <div class="tag">🔥 Hot Stone Massage</div>
+          <div class="tag">🔥 עיסוי אבנים חמות</div>
           <h3 class="product-title">עיסוי באבנים חמות – גוף מלא</h3>
           <p>
-            אבני בזלת חמות מחליקות על הגוף וממיסות מתחים עמוקים – רוגע עמוק וזרימת דם טובה.
-            עיסוי גוף מלא מכף רגל ועד ראש כולל עיסוי פנים.
+            עיסוי גוף מלא מכף רגל ועד ראש כולל עיסוי פנים. אבני בזלת חמות מחליקות על הגוף וממיסות מתחים עמוקים. החום חודר לרקמות ומעניק רוגע עמוק וזרימת דם טובה. מאפשר עבודה רכה אך יעילה על עייפות וכאבים.
           </p>
           <p class="price">60 דק' – 210₾</p>
           <button class="button"
@@ -331,11 +323,10 @@
 
         <!-- 🌼 Thai Herbal Compress Massage – גוף -->
         <article class="product-card">
-          <div class="tag">🌼 Thai Herbal Compress Massage</div>
+          <div class="tag">🌼 קומפרסים תאילנדיים</div>
           <h3 class="product-title">עיסוי גוף בקומפרסים תאילנדים</h3>
           <p>
-            שקיות צמחים תאילנדים חמות מעניקות ריפוי טבעי, ניקוז עומק והקלה על כאבים.
-            עיסוי גוף מלא מכף רגל ועד ראש כולל עיסוי פנים.
+            עיסוי גוף מלא מכף רגל ועד ראש כולל עיסוי פנים. שקיות צמחים תאילנדיים חמות מעניקות ריפוי טבעי וניקוז עומק. החום והעשבים מרגיעים כאבים, מפחיתים דלקת ומשפרים חיוניות. משלב עיסוי עשיר להעצמת תחושת השחרור.
           </p>
           <p class="price">60 דק' – 220₾ · 90 דק' – 260₾</p>
           <div class="duration-options">
@@ -359,11 +350,10 @@
 
         <!-- 🇯🇵 Shiatsu -->
         <article class="product-card">
-          <div class="tag">🇯🇵 Shiatsu Massage</div>
+          <div class="tag">🇯🇵 שיאצו יפני</div>
           <h3 class="product-title">עיסוי שיאצו יפני</h3>
           <p>
-            עיסוי ללא שמן בלחיצות לאורך מרידיאנים – מאזן אנרגיה פנימית ומרגיע עומס נפשי.
-            עיסוי גוף מלא מכף רגל ועד ראש כולל עיסוי פנים.
+            עיסוי גוף מלא מכף רגל ועד ראש כולל עיסוי פנים. עיסוי ללא שמן המתבצע בלחיצות לאורך מרידיאני הגוף. מאזן אנרגיה פנימית ומשחרר עומס מהמערכת העצבית. מתאים לעייפות, מתח נפשי וחוסר ריכוז.
           </p>
           <p class="price">60 דק' – 180₾ · 90 דק' – 230₾</p>
           <div class="duration-options">
@@ -387,10 +377,10 @@
 
         <!-- 🦶 פוט מסאז' -->
         <article class="product-card">
-          <div class="tag">🦶 Thai Foot Massage</div>
+          <div class="tag">🦶 פוט מסאז'</div>
           <h3 class="product-title">פוט מסאז' – עיסוי כפות רגליים תאילנדי רפלקסולוגי</h3>
           <p>
-            עיסוי עמוק ועדין לכפות הרגליים עם לחיצות רפלקסולוגיות, מאזן מערכות גוף שונות.
+            עיסוי עמוק ועדין המשלב טכניקות תאילנדיות ולחיצות רפלקסולוגיות. מפעיל נקודות השתקפות, משפר זרימת דם ומאזן מערכות גוף שונות. מרפה עומסים מצטברים ומעניק רוגע עמוק לגוף ולנפש. מומלץ לאחר הליכה מרובה, עמידה ממושכת או יום עמוס.
           </p>
           <p class="price">30 דק' – 80₾ · 60 דק' – 120₾</p>
           <div class="duration-options">
